--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -1,2 +1,9 @@
 @import "main";
 @import "site";
+@import "mobile";
+@import "logo";
+@import "menu";
+@import "social";
+@import "hero";
+@import "partners";
+@import "media-gallery";
