--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -6,24 +6,44 @@
   min-width: 320px;
   overflow: hidden;
   @include OpenSans;
+
+  &__header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 75px;
+    padding: 0 15px;
+    background-color: #000;
+  }
+
 }
+
 @media (min-width: $phone-landscape) {
   .site {
 
   }
 }
+
 @media (min-width: $tablet-portrait) {
   .site {
 
   }
 }
+
 @media (min-width: $tablet-landscape) {
   .site {
 
   }
 }
+
 @media (min-width: $desktop) {
   .site {
+
+    &__header{
+      padding: 0 calc( 50% - 720px );
+    }
 
   }
 }
