--- a/app/sass/_media-gallery.scss
+++ b/app/sass/_media-gallery.scss
@@ -1,449 +1,165 @@
-.media-gallery[data-loaded-type="photo"] .media-gallery__item_video {
-  display: none;
-}
-.media-gallery[data-loaded-type="video"] .media-gallery__item:not(.media-gallery__item_video){
-  display: none;
-}
-.media-gallery {
+.media-gallery{
+  position: relative;
   width: 100%;
-  padding: 0 10px;
+  padding: 41px calc( 50% - 725px) 52px;
+  text-align: center;
+
+  &:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
 
   &__title{
-    margin-bottom: 40px;
-    font-size: 27px;
+    margin-bottom: 38px;
+    font-size: 22px;
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: -1.9px;
-
-    i {
-      display: block;
-      width: auto;
-      margin: 0 auto 15px;
-      font-size: 35px;
-    }
-
   }
+
   &__cover {
     overflow: hidden;
-    margin: 0 25px;
-
-    .swiper-wrapper {
-
-    }
   }
-  &__inner {
-    position: relative;
 
-    .swiper-button-next,
-    .swiper-button-prev{
-      position: absolute;
-      top: 50%;
-      width: 15px;
-      height: 80px;
-      background-color: rgba(0,0,0,.24);
-      -webkit-transform: translateY(-28%);
-      transform: translateY(-28%);
-      z-index: 2;
-      background-image: none;
+  &__wrap{
+    margin: 0 0 35px 7px;
+  }
 
-      &:before{
-        content: '';
-        position: absolute;
-        top: 45%;
-        left: 6px;
-        width: 7px;
-        height: 7px;
-        border-top: 1px solid #fff;
-        border-left: 1px solid #fff;
-        transform: rotate(-45deg);
-      }
-    }
-    .swiper-button-next {
-      right: 0;
+  &__item, &__sizer {
+    width: 97%;
+    margin: 0 .6% 1%;
+  }
 
-      &:before{
-        left: 3px;
-        -webkit-transform: rotate(135deg);
-        transform: rotate(135deg);
-      }
-    }
-    .swiper-button-prev {
-      left: 0;
-    }
-  }
-  &__item {
-    display: inline-block;
-    vertical-align: top;
-    padding-bottom: 94.9%;
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border: 7px solid #e6e6e6;
-
-    &_video {
-      position: relative;
-
-      &:before,
-      &:after {
-        @include absoluteCenter();
-        content:'';
-      }
-      &:before {
-        background-color: rgba( 255, 255, 255, 0.85 );
-        box-shadow: 0 0 80px 0 rgba(0, 0, 0, .8);
-        width: 80px;
-        height: 80px;
-        -webkit-transition: background-color 0.3s ease;
-        transition: background-color 0.3s ease;
-      }
-      &:after {
-        margin: 0 0 0 9px;
-        border: 13px solid transparent;
-        border-left: 20px solid #435a65;
-        content: '';
-      }
-      &:hover {
-
-        &:before {
-          background-color: rgba( 203, 241, 241, 1 );
-        }
-      }
-    }
-  }
-  &__item-title {
-    display: none;
-  }
-  &__switcher {
-    margin: 0 0 36px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  &__check {
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
-    max-width: 180px;
-    width: 46.8%;
-    height: 56px;
-    text-transform: uppercase;
-    margin: 0 2px 4px;
-    -webkit-transition: background .3s ease;
-    transition: background .3s ease;
-
-    & + .media-gallery__check {
-      border-left: none;
-    }
-    &.active {
-      background: rgba(255,255,255,0.3);
-    }
-  }
-  &__more {
-    display: none;
-  }
-}
-
-.swiper-popup {
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.9);
-  -webkit-transition: opacity 0.3s ease, visibility 0.3s ease;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
-
-  &.active {
-    opacity: 1;
-    visibility: visible;
-  }
-  .swiper-container {
-    height: 100%;
-  }
-  .swiper-slide__title {
-    display: block;
-    text-align: center;
-    color: #fff;
-    font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
-  }
-  .swiper-pagination {
-    display: none;
-  }
-  .swiper-button-next,
-  .swiper-button-prev {
-    width: 48px;
-    height: 48px;
-    margin-top: -24px;
-    background: none;
-    left: 0;
-
-    &:before {
-      position: absolute;
-      top: 16px;
-      left: 10px;
-      width: 16px;
-      height: 16px;
-      border-left: 3px solid #fff;
-      border-bottom: 3px solid #fff;
-      -ms-transform: rotate(45deg);
-      -webkit-transform: rotate(45deg);
-      transform: rotate(45deg);
-      -webkit-transition: border-color 0.3s ease;
-      transition: border-color 0.3s ease;
-      content: '';
-    }
-  }
-  .swiper-button-next {
-    left: auto;
-    right: 0;
-
-    &:before {
-      left: auto;
-      right: 10px;
-      -ms-transform: rotate(225deg);
-      -webkit-transform: rotate(225deg);
-      transform: rotate(225deg);
-    }
-  }
-  &__inner {
+  &__item{
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.6);
+    -webkit-transition: opacity .3s ease, transform .3s ease;
+    transition: opacity .3s ease, transform .3s ease;
 
     img {
       display: block;
-      margin: 0 auto 18px;
-    }
-    .fa-spin {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -ms-transform: translate(-50%, -50%);
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      color: #fff;
-      font-size: 24px;
-    }
-  }
-  &__video {
-    position: relative;
-    width: 250px;
-    height: 150px;
-    margin-bottom: 18px;
-    border: none;
-
-    iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
-      height: 100%;
-      border: none;
     }
-  }
-  &__close {
-    display: block;
-    position: absolute;
-    top: -31px;
-    right: -31px;
-    width: 32px;
-    height: 32px;
 
-    &:after,
-    &:before {
+    &.hidden {
+      opacity: 0;
       position: absolute;
-      top: 15px;
-      left: 8px;
-      width: 16px;
-      height: 2px;
-      background: #fff;
-      -webkit-transform: rotate(45deg);
-      transform: rotate(45deg);
-      -webkit-transition: background-color 0.3s ease;
-      transition: background-color 0.3s ease;
-      content:'';
+      -webkit-transform: scale(0.8);
+      transform: scale(0.8);
     }
-    &:after {
-      -webkit-transform: rotate(-45deg);
-      transform: rotate(-45deg);
-    }
-    &:hover {
 
-      &:after,
-      &:before {
+  }
+
+  &__switcher{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+    margin-bottom: 33px;
+
+    button{
+      position: relative;
+      margin: 0 25px 33px;
+      padding: 0;
+      border: none;
+      color: #444;
+      @include OpenSans;
+      font-size: 14px;
+      font-weight: 400;
+      background-color: transparent;
+      text-transform: uppercase;
+
+      &:after{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        left: 0;
+        border-bottom: 2px solid #01b1af;
+        -webkit-transform: translateY( 2px );
+        transform: translateY( 2px );
+        opacity: 0;
+        -webkit-transition: transform .3s ease, opacity .3s ease;
+        transition: transform .3s ease, opacity .3s ease;
+        content: '';
+      }
+
+      &.active{
+        font-weight: 600;
+
+        &:after{
+          opacity: 1;
+          -webkit-transform: translateY( 0 );
+          transform: translateY( 0 );
+        }
 
       }
+
     }
+
   }
-}
 
-@media (min-width: 460px) {
+  &__more{
+    position: relative;
+    color: #444;
+    font-size: 24px;
+    text-transform: uppercase;
+    white-space: nowrap;
 
-  .swiper-popup {
-
-    &__video {
-      width: 400px;
-      height: 225px;
+    &:after{
+      position: absolute;
+      top: calc( 100% - 3px );
+      right: 0;
+      left: 0;
+      border-bottom: 2px solid #444;
+      -webkit-transition: transform .3s ease;
+      transition: transform .3s ease;
+      content: '';
     }
+
+    &:hover{
+
+      &:after{
+        -webkit-transform: translateY(2px);
+        transform: translateY(2px);
+      }
+
+    }
+
   }
 
 }
 
 @media (min-width: $tablet-portrait) {
+  .media-gallery{
 
-  .media-gallery {
-    &__check {
-      max-width: 271px;
-      width: 46.8%;
-      height: 60px;
-      font-size: 24px;
+    &__title{
+      font-size: 48px;
     }
-    &__switcher {
-      margin-bottom: 43px;
-    }
-    &__wrap {
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: space-around;
-      transform: none !important;
-      margin: 0 auto;
-    }
-    &__item {
-      padding-bottom: 32%;
-      width: 379px!important;
-      height: 379px;
-      border: 6px solid #e6e6e6;
-    }
-    &__cover {
-      margin: 0 0 51px;
-    }
-    &__inner {
 
-      .swiper-button-prev,
-      .swiper-button-next {
-        display: none;
-      }
+    &__item, &__sizer {
+      width: 32%;
+      margin: 0 .6% 1%;
     }
-    &__more {
-      display: inline-flex;
-      font-size: 24px;
-      line-height: 1;
-    }
-  }
-  .swiper-popup {
 
-    .swiper-button-prev,
-    .swiper-button-next {
-      width: 60px;
-      height: 60px;
+    &__switcher{
+      flex-flow: row nowrap;
 
-      &:before {
-        top: 22px;
-        left: 23px;
-      }
-      &:hover:before {
+      button{
+        margin-bottom: 0;
+        font-size: 18px;
 
-      }
-    }
-    .swiper-button-prev {
-      left: 20px;
-    }
-    .swiper-button-next {
-      right: 20px;
+        &:hover{
 
-      &:before {
-        left: auto;
-        right: 23px;
-      }
-    }
-    &__video {
-      width: 700px;
-      height: 395px;
-    }
-  }
+          &:after{
+            opacity: 1;
+            -webkit-transform: translateY( 0 );
+            transform: translateY( 0 );
+          }
 
-}
-
-@media (min-width: $desktop) {
-
-  .media-gallery {
-
-    &__switcher {
-      margin-bottom: 35px;
-    }
-    &__cover {
-      margin-bottom: 37px;
-    }
-    &__wrap {
-      display: block;
-
-      &:after {
-        display: block;
-        clear: both;
-        content: '';
-      }
-    }
-    &__item {
-      margin: 0;
-      padding-bottom: 18.8%;
-      border: 8px solid #e6e6e6;
-      box-sizing: border-box;
-      -webkit-transition: opacity 0.3s ease, transform 0.3s ease;
-      transition: opacity 0.3s ease, transform 0.3s ease;
-
-      &.hidden {
-        opacity: 0;
-        position: absolute;
-        -webkit-transform: scale(0.8);
-        transform: scale(0.8);
-      }
-      &:not(.media-gallery__item_video):before {
-        opacity: 0;
-        @include absoluteCenter();
-        background-color: rgba( 249, 143, 1, .949 );
-        box-shadow: 0 0 80px 0 rgba(0, 0, 0, .8);
-        width: 80px;
-        height: 80px;
-        -webkit-transition: opacity .3s ease;
-        transition: opacity .3s ease;
-        content:'';
-      }
-      &:not(.media-gallery__item_video):hover {
-
-        &:before {
-          opacity: 1;
         }
-        .media-gallery__item-title {
-          visibility: visible;
-          opacity: 1;
-        }
+
       }
-    }
-    &__item-sizer {
-      width: 20%;
-    }
-    &__item-title {
-      display: block;
-      opacity: 0;
-      visibility: hidden;
-      font-size: 20px;
-      text-align: center;
-      -webkit-transition: visibility 0.3s ease, opacity 0.3s ease;
-      transition: visibility 0.3s ease, opacity 0.3s ease;
-    }
-  }
-  .swiper-popup {
 
-    .swiper-button-prev {
-      left: 50px;
     }
-    .swiper-button-next {
-      right: 50px;
-    }
-  }
 
+  }
 }
-
-
