--- a/app/sass/_reset.scss
+++ b/app/sass/_reset.scss
@@ -26,16 +26,19 @@ input::-webkit-inner-spin-button {
 
 /* --------------- placeholder --------------- */
 ::-webkit-input-placeholder {
-  color: #fff;
+  color: #777;
+  text-transform: uppercase;
   -webkit-transition: color 300ms ease-in-out;
 }
 :-moz-placeholder {
-  color: #fff;
+  color: #777;
+  text-transform: uppercase;
   -webkit-transition: color 300ms ease-in-out;
   transition: color 300ms ease-in-out;
 }
 .placeholder {
-  color: #fff;
+  color: #777;
+  text-transform: uppercase;
   -webkit-transition: color 300ms ease-in-out;
   transition: color 300ms ease-in-out;
 }
