--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -7,3 +7,7 @@
 @import "hero";
 @import "partners";
 @import "media-gallery";
+@import "footer";
+@import "subscribe";
+@import "copyriht";
+@import "preloader";
