--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -82,7 +82,8 @@
 
     &__get-in-touch{
       justify-content: flex-end;
-      margin-right: 22px;
+      margin-right: 42px;
+      order: 2;
     }
 
   }
