--- a/app/sass/_copyriht.scss
+++ b/app/sass/_copyriht.scss
@@ -5,10 +5,9 @@
 
 @media (min-width: $desktop) {
   .copyright{
-    position: absolute;
-    top: 30px;
-    left: calc( 50% - 640px);
+    order: 1;
     width: auto;
+    margin: 0 0 -20px 20px;
   }
 }
 
