--- a/app/sass/_partners.scss
+++ b/app/sass/_partners.scss
@@ -64,7 +64,6 @@
 
 @media (min-width: $desktop) {
   .partners{
-    padding: 0 calc( 50% - 650px );
 
     &__swiper-prev,
     &__swiper-next{
@@ -89,6 +88,11 @@
     }
 
   }
+}
 
+@media (min-width: 1320px) {
+  .partners {
+    padding: 0 calc( 50% - 650px );
+  }
 }
 
