--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -5,3 +5,12 @@
 @import "flexbox";
 @import "reset";
 @import "fonts/google-fonts";
+@import "site";
+@import "mobile";
+@import "logo";
+@import "header";
+@import "menu";
+@import "social";
+@import "footer";
+@import "copyriht";
+@import "subscribe";
