--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -15,8 +15,7 @@
     align-items: center;
     position: relative;
     width: 100%;
-    height: 75px;
-    padding: 0 15px;
+    padding: 19px 15px;
     background-color: #000;
   }
 
@@ -48,7 +47,7 @@
   .site {
 
     &__header{
-      padding: 0 calc( 50% - 720px );
+      padding: 19px calc( 50% - 720px ) 0;
     }
 
     &__footer{
