--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -21,12 +21,9 @@
   }
 
   &-btn{
-    position: absolute;
-    top: 50%;
-    right: 10px;
     width: 34px;
     height: 27px;
-    margin-right: 9px;
+    margin: 7px 9px 0 0;
     padding: 13px 0 13px 0;
     background-color: transparent;
     z-index: 10;
@@ -99,6 +96,7 @@
     opacity: 1;
     visibility: visible;
     background-color: transparent;
+    margin-bottom: 20px;
 
     &-btn{
       display: none;
