--- a/app/sass/_about-us.scss
+++ b/app/sass/_about-us.scss
@@ -1,13 +1,29 @@
 .about-us {
+  width: 100%;
   margin-bottom: 63px;
   padding: 42px 10px 0;
 
   h1{
     width: 100%;
-    margin-bottom: 75px;
-    font-size: 48px;
+    margin-bottom: 33px;
+    font-size: 24px;
     text-align: center;
     text-transform: uppercase;
+  }
+
+  &__content{
+    margin-bottom: 30px;
+  }
+
+  &__img{
+    width: 100%;
+
+    img{
+      display: block;
+      max-width: 100%;
+      margin: 0 auto;
+    }
+
   }
 
 }
@@ -21,8 +37,14 @@
     margin-bottom: 67px;
     padding: 42px calc( 50% - 720px) 0;
 
+    h1{
+      margin-bottom: 75px;
+      font-size: 48px;
+    }
+
     &__content{
       width: 50%;
+      margin-bottom: 0;
       padding: 0 88px 0 99px;
     }
 
