--- a/app/sass/_catalog.scss
+++ b/app/sass/_catalog.scss
@@ -12,6 +12,8 @@
 
     img{
       display: block;
+      width: 100%;
+      max-width: 367px;
       margin: 0 auto;
       box-shadow: 0 1px 5px 0 rgba(0,0,0,0.6);
     }
