--- a/app/sass/_sub-menu.scss
+++ b/app/sass/_sub-menu.scss
@@ -1,22 +1,66 @@
 .sub-menu {
+  position: relative;
   width: 100%;
   padding: 27px 10px 36px;
   border-bottom: 1px solid #e5e5e5;
   text-align: center;
 
+  &:before,
+  &:after{
+    position: absolute;
+    top: 0;
+    width: 80px;
+    height: 100%;
+    pointer-events: none;
+    z-index: 2;
+    transition: opacity .3s ease;
+    -webkit-transition: opacity .3s ease;
+    content: '';
+  }
+
+  &.start:before {
+    opacity: 0;
+  }
+
+  &.end:after{
+    opacity: 0;
+  }
+
+  &:before{
+    left: 0;
+    background: -moz-linear-gradient(left,  rgba(252,252,252,0.8) 0%, rgba(252,252,252,0.8) 47%, rgba(252,252,252,0) 100%);
+    background: -webkit-linear-gradient(left,  rgba(252,252,252,0.8) 0%,rgba(252,252,252,0.8) 47%,rgba(252,252,252,0) 100%);
+    background: linear-gradient(to right,  rgba(252,252,252,.8) 0%,rgba(252,252,252,0.8) 47%,rgba(252,252,252,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ccf6f6f9', endColorstr='#00fcfcfc',GradientType=1 );
+  }
+
+  &:after{
+    right: 0;
+    background: -moz-linear-gradient(left,  rgba(252,252,252,0) 0%, rgba(252,252,252,0.8) 53%, rgba(252,252,252,0.8) 100%);
+    background: -webkit-linear-gradient(left,  rgba(252,252,252,0) 0%,rgba(252,252,252,0.8) 53%,rgba(252,252,252,0.8) 100%);
+    background: linear-gradient(to right,  rgba(252,252,252,0) 0%,rgba(252,252,252,0.8) 53%,rgba(252,252,252,0.8) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00fcfcfc', endColorstr='#ccf6f6f9',GradientType=1 );
+  }
+
+  &__swiper{
+    overflow: visible!important;
+  }
+
   &__item{
     position: relative;
+    width: auto!important;
     font-size: 18px;
     font-weight: 300;
     color: #444;
     margin: 0 15px;
     text-transform: uppercase;
+    overflow: visible!important;
 
     &:after{
       position: absolute;
       left: 0;
       right: 100%;
-      bottom: -3px;
+      bottom: -6px;
       border-bottom: 3px solid #01b1af;
       -webkit-transition: right .3s ease;
       transition: right .3s ease;
@@ -31,6 +75,18 @@
         right: 0;
       }
 
+    }
+
+  }
+
+}
+
+@media (min-width: $tablet-portrait) {
+
+  .sub-menu {
+
+    .swiper-wrapper{
+      justify-content: center!important;
     }
 
   }
