--- a/app/sass/_about-us.scss
+++ b/app/sass/_about-us.scss
@@ -6,6 +6,7 @@
   h1{
     width: 100%;
     margin-bottom: 33px;
+    color: #222;
     font-size: 24px;
     text-align: center;
     text-transform: uppercase;
