--- a/app/sass/_blog.scss
+++ b/app/sass/_blog.scss
@@ -120,8 +120,7 @@
     &-popup{
       position: absolute;
       top: calc( 100% + 5px );
-      left: -10px;
-      right: -10px;
+      right: 0;
       padding: 5px 0 7px;
       background-color: #fff;
       font-weight: 300;
