--- a/app/sass/_amazon.scss
+++ b/app/sass/_amazon.scss
@@ -41,16 +41,75 @@
     color: #222;
     font-weight: 300;
     font-size: 18px;
+    text-align: center;
+
+    &:nth-child( odd ){
+      background-color: #fff;
+    }
+
+    h2{
+      width: 100%;
+      margin-bottom: 33px;
+      font-size: 20px;
+      line-height: 28px;
+    }
 
     &-content{
       margin-bottom: 39px;
       font-size: 18px;
       line-height: 24px;
+      text-align: left;
 
-      h2{
-        margin-bottom: 33px;
-        font-size: 20px;
-        line-height: 28px;
+      p{
+
+        + dl{
+          margin-top: 15px;
+        }
+
+      }
+
+      span{
+        color: #01b1af;
+      }
+
+      dl{
+        margin-bottom: 35px;
+      }
+
+      dt{
+        font-weight: 400;
+      }
+
+      dd{
+        margin-bottom: 16px;
+      }
+
+      img{
+        margin-bottom: 44px;
+      }
+
+      .btn{
+        display: block;
+        width: 200px;
+        padding: 7px 10px;
+        color: #fff;
+        font-size: 14px;
+        font-weight: 600;
+        background-color: #000;
+        text-align: center;
+        text-transform: uppercase;
+      }
+
+      &_1{
+
+        p {
+          margin-bottom: 20px;
+        }
+
+        .btn{
+          margin-top: 55px;
+        }
+
       }
 
     }
@@ -74,6 +133,60 @@
         color: #01b1af;
       }
 
+    }
+
+  }
+
+  &__advantages{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 25px 10px;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 300;
+
+    &-item{
+      width: 31%;
+      text-align: center;
+    }
+
+    &-icon{
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      height: 100px;
+      margin-bottom: 25px;
+    }
+
+    h3{
+      margin-bottom: 7px;
+      font-weight: 400;
+      font-size: 18px;
+    }
+
+    img{
+      display: block;
+      margin: 0 auto;
+    }
+
+  }
+
+  &__footer{
+    padding: 41px 10px 32px;
+    color: #222;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    text-align: center;
+
+    a{
+      color: #01b1af;
+      font-size: 20px;
+    }
+
+    strong{
+      font-weight: 700;
     }
 
   }
@@ -119,9 +232,51 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
+      flex-flow: row wrap;
 
       &-content{
-        width: calc( 100% - 670px );
+        width: calc( 100% - 622px );
+
+        .btn{
+          -webkit-transition: background-color .3s ease;
+          transition: backgroun-color .3s ease;
+
+          &:hover{
+            background-color: #01b1af;
+          }
+
+        }
+
+      }
+
+    }
+
+    &__footer{
+
+      a{
+        position: relative;
+
+        &:after{
+          position: absolute;
+          top: calc( 100% - 2px );
+          left: 0;
+          right: 0;
+          opacity: 0;
+          border-bottom: 1px solid #01b1af;
+          -webkit-transition: opacity .3s ease;
+          transition: opacity .3s ease;
+          content: '';
+        }
+
+        &:hover{
+
+          &:after{
+            opacity: 1;
+          }
+
+        }
+
+
       }
 
     }
@@ -134,6 +289,14 @@
 
     &__item{
       padding: 50px calc( 50% - 621px) 56px;
+    }
+
+    &__advantages{
+      padding: 60px calc( 50% - 621px) 70px;
+    }
+
+    &__footer{
+      padding: 41px calc( 50% - 621px) 32px;
     }
 
   }
