--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -36,7 +36,22 @@
   }
 
   &__content{
+    width: 100%;
     padding: 0 10px;
+  }
+
+  &__aside{
+    padding-top: 54px;
+
+    > .followers{
+      display: none;
+    }
+
+  }
+
+  &__text{
+    max-width: 861px;
+    padding-right: 15px;
   }
 
 }
@@ -48,6 +63,23 @@
       display: flex;
       justify-content: space-between;
       align-items: stretch;
+    }
+
+    &__aside{
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: space-between;
+      align-items: center;
+      width: 310px;
+
+      > * {
+        width: 100%;
+      }
+
+      > .followers{
+        display: block;
+      }
+
     }
 
   }
@@ -73,7 +105,7 @@
   .site {
 
     &__content{
-      padding: 0 calc( 50% - 640px ) 84px;
+      padding: 0 calc( 50% - 621px) 0 calc( 50% - 613px);
     }
 
   }
