--- a/app/sass/article-page.scss
+++ b/app/sass/article-page.scss
@@ -1,2 +1,6 @@
 @import "main";
-@import "article";
+@import "article-blog";
+@import "comments";
+@import "join";
+@import "followers";
+@import "posts";
