--- a/app/sass/_promo.scss
+++ b/app/sass/_promo.scss
@@ -89,6 +89,13 @@
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.25);
   }
 
+  &__slide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+  }
+
   &__swiper-prev,
   &__swiper-next{
     display: flex;
@@ -130,6 +137,10 @@
       border-right: 2px solid #3cc3c2;
     }
 
+  }
+
+  .promo__slider{
+    width: 75%;
   }
 
 }
