--- a/app/sass/_services.scss
+++ b/app/sass/_services.scss
@@ -1,6 +1,6 @@
 .services {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-flow: row wrap;
   padding: 50px 10px 0;
