--- a/app/sass/_media-gallery.scss
+++ b/app/sass/_media-gallery.scss
@@ -102,6 +102,8 @@
     font-size: 24px;
     text-transform: uppercase;
     white-space: nowrap;
+    -webkit-transition: opacity .3s ease, visibility .3s ease;
+    transition: opacity .3s ease, visibility .3s ease;
 
     &:after{
       position: absolute;
@@ -121,6 +123,11 @@
         transform: translateY(2px);
       }
 
+    }
+
+    &.hide{
+      opacity: 0;
+      visibility: hidden;
     }
 
   }
