--- a/app/sass/_place-order.scss
+++ b/app/sass/_place-order.scss
@@ -49,7 +49,7 @@
   }
 
   &__warning{
-    padding: 0 10px;
+    padding: 0 10px 54px;
     font-size: 18px;
     line-height: 24px;
     text-align: center;
@@ -333,6 +333,8 @@
         width: 25%;
         height: inherit;
         background-color: #01b1af;
+        -webkit-transition: width .3s ease;
+        transition: width .3s ease;
       }
 
     }
