--- a/app/sass/_clients.scss
+++ b/app/sass/_clients.scss
@@ -42,9 +42,32 @@
     background-color: #eee;
 
     img{
-      position: relative;
       max-width: 100%;
       z-index: 2;
+
+      &:after{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(1,177,175,.8);
+        z-index: 1;
+        content: '';
+      }
+
+      &:nth-child(1){
+        position: relative;
+        z-index: 1;
+      }
+      &:nth-child(2){
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 3;
+      }
+
     }
 
   }
@@ -68,21 +91,35 @@
       position: relative;
 
       &:after{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(1,177,175,.8);
-        z-index: 1;
         opacity: 0;
-        content: '';
         -webkit-transition: opacity .3s ease;
         transition: opacity .3s ease;
       }
 
-      &:hover:after{
-        opacity: 1;
+      img{
+
+        &:nth-child(2){
+          -webkit-transition: opacity .3s ease;
+          transition: opacity .3s ease;
+          opacity: 0;
+        }
+
+      }
+
+      &:hover{
+
+        &:after{
+          opacity: 1;
+        }
+
+        img {
+
+          &:nth-child(2) {
+            opacity: 1;
+          }
+
+        }
+
       }
 
     }
