--- a/app/sass/_media-gallery.scss
+++ b/app/sass/_media-gallery.scss
@@ -57,8 +57,9 @@
 
     button{
       position: relative;
-      margin: 0 25px 33px;
-      padding: 0;
+      width: auto!important;
+      margin: 0 15px;
+      padding: 0 0 3px;
       border: none;
       color: #444;
       @include OpenSans;
@@ -69,7 +70,7 @@
 
       &:after{
         position: absolute;
-        top: 100%;
+        top: calc( 100% - 2px );
         right: 0;
         left: 0;
         border-bottom: 2px solid #01b1af;
@@ -92,6 +93,43 @@
 
       }
 
+    }
+
+    &:before,
+    &:after{
+      position: absolute;
+      top: 0;
+      width: 80px;
+      height: 100%;
+      pointer-events: none;
+      z-index: 2;
+      transition: opacity .3s ease;
+      -webkit-transition: opacity .3s ease;
+      content: '';
+    }
+
+    &.start:before {
+      opacity: 0;
+    }
+
+    &.end:after{
+      opacity: 0;
+    }
+
+    &:before{
+      left: 0;
+      background: -moz-linear-gradient(left,  rgba(252,252,252,0.8) 0%, rgba(252,252,252,0.8) 47%, rgba(252,252,252,0) 100%);
+      background: -webkit-linear-gradient(left,  rgba(252,252,252,0.8) 0%,rgba(252,252,252,0.8) 47%,rgba(252,252,252,0) 100%);
+      background: linear-gradient(to right,  rgba(252,252,252,.8) 0%,rgba(252,252,252,0.8) 47%,rgba(252,252,252,0) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ccf6f6f9', endColorstr='#00fcfcfc',GradientType=1 );
+    }
+
+    &:after{
+      right: 0;
+      background: -moz-linear-gradient(left,  rgba(252,252,252,0) 0%, rgba(252,252,252,0.8) 53%, rgba(252,252,252,0.8) 100%);
+      background: -webkit-linear-gradient(left,  rgba(252,252,252,0) 0%,rgba(252,252,252,0.8) 53%,rgba(252,252,252,0.8) 100%);
+      background: linear-gradient(to right,  rgba(252,252,252,0) 0%,rgba(252,252,252,0.8) 53%,rgba(252,252,252,0.8) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00fcfcfc', endColorstr='#ccf6f6f9',GradientType=1 );
     }
 
   }
@@ -320,8 +358,11 @@
     &__switcher{
       flex-flow: row nowrap;
 
+      .swiper-wrapper{
+        justify-content: center;
+      }
+
       button{
-        margin-bottom: 0;
         font-size: 18px;
 
         &:hover{
@@ -386,6 +427,14 @@
 
     &__item{
       cursor: pointer;
+    }
+
+    &__switcher{
+
+      button{
+        margin: 0 25px;
+      }
+
     }
 
   }
