--- a/app/sass/_partners.scss
+++ b/app/sass/_partners.scss
@@ -14,8 +14,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: auto!important;
     height: 150px!important;
+
+    img{
+      display: block;
+      max-width: 98%;
+      margin: 0 auto;
+    }
+
   }
 
   &__swiper-prev,
@@ -28,6 +34,7 @@
     height: 25px;
     border: 2px solid #3cc3c2;
     border-radius: 50px;
+    overflow: hidden;
 
     &:before{
       display: block;
