--- a/app/sass/_preloader.scss
+++ b/app/sass/_preloader.scss
@@ -8,6 +8,8 @@
   bottom: 0;
   left: 0;
   background-color: #fff;
+  -webkit-transition: visibility .3s ease, opacity .3s ease;
+  transition: visibility .3s ease, opacity .3s ease;
 
   &.active {
     opacity: 1;
@@ -17,9 +19,9 @@
   &__inner {
     position: absolute;
     top: 50%;
-    left: 50%;
+    bottom: 50px;
     display: block;
-    margin: -20px 0 0 -20px;
+    margin-left: -20px;
     width: 40px;
     height: 40px;
     border: 4px solid #000;
