--- a/app/sass/_preloader.scss
+++ b/app/sass/_preloader.scss
@@ -18,7 +18,7 @@
 
   &__inner {
     position: absolute;
-    top: 50%;
+    left: 50%;
     bottom: 50px;
     display: block;
     margin-left: -20px;
