--- a/app/sass/_clients.scss
+++ b/app/sass/_clients.scss
@@ -55,7 +55,8 @@
     }
 
     img{
-      max-width: 100%;
+      max-width: 90%;
+      max-height: 90%;
     }
 
     &-back{
@@ -139,4 +140,3 @@
 
   }
 }
-
