--- a/app/sass/_blog.scss
+++ b/app/sass/_blog.scss
@@ -253,7 +253,17 @@
     }
 
     &__img {
-      width: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+      height: 150px;
+
+      img {
+        width: auto;
+        height: 100%;
+      }
+
     }
 
     &__content {
