--- a/app/sass/_partners.scss
+++ b/app/sass/_partners.scss
@@ -14,11 +14,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150px!important;
+    height: 110px!important;
 
     img{
       display: block;
       max-width: 98%;
+      max-height: 100%;
       margin: 0 auto;
     }
 
